SWITCHYARD-455 add generic facets to project to enable deployment of switchyard projects to wtp servers