@@ -14,6 +14,10 @@
   <name>SwitchYard: Eclipse Tools Test Plugins</name>
   <description>Parent project for SwitchYard Eclipse plugin tests</description>
 
+  <properties>
+    <tycho.test.jvmArgs>-XX:MaxPermSize=256m</tycho.test.jvmArgs>
+  </properties>
+
   <modules>
     <module>org.switchyard.tools.m2e.tests</module>
     <module>org.switchyard.tools.ui.tests</module>
@@ -39,7 +43,7 @@
             <include>**/*Test.java</include>
           </includes>
           <argLine>${tycho.test.jvmArgs}</argLine>
-          <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
+          <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds>
         </configuration>
       </plugin>
     </plugins>
